--- a/aboutstyles.css
+++ b/aboutstyles.css
@@ -15,8 +15,6 @@ body{
 
 }
 
-
-
 li{
     list-style: none;
 }
@@ -32,11 +30,11 @@ a:hover{
 }
 
 header{
-    position: fixed;
     width: 100%;
     z-index: 4;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
     background-color: #ffffff;
+    position: fixed;
     padding: 0 2rem;
 }
 
@@ -161,11 +159,9 @@ section#homepage{
     justify-content: center;
     align-items: center;
     background: #fff4f4;
-    height: 60vh;
 }
 
 .image-slider{
-    top: 6vh;
     display: flex;
     position: relative;
     width: 800px;
@@ -206,7 +202,7 @@ section#homepage{
     z-index: 2;
     position: absolute;
     display: flex;
-    bottom: 30px;
+    bottom: 20px;
     left: 50%;
     transform: translatex(-50%);
 }
@@ -251,16 +247,18 @@ section#homepage{
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 320px;
-    height: 370px;
+    width: 400px;
+    height: 440px;
     padding: 10px;
     border-radius: 5px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .card img{
     border-radius: 5px;
-    width: 300px;
-    height: 300px;
+    width: 380px;
+    height: 420px;
 }
 
 .card:hover {
@@ -274,7 +272,7 @@ section#homepage{
 
 /*------- ABOUT US --------*/
 .about{
-    padding-top: 10px !important;
+    padding-top: 15vh !important;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 20px;
@@ -286,6 +284,13 @@ section#homepage{
     justify-content: center;
 }
 .about-info{
+    text-align: justify;
+    font-size: 1.2rem;
+    font-weight: 100;
+    margin-bottom: 10px;
+}
+
+.fb-info{
     font-size: 1.2rem;
     font-weight: 100;
     margin-bottom: 10px;
@@ -316,9 +321,10 @@ margin-left: 50px !important;
   margin-bottom: auto;
 }
 .info{
-    margin-top: 50px;
+    margin: 100px;
     width: 40%;
-    text-align: justify;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .staff{
@@ -338,6 +344,7 @@ margin-left: 50px !important;
     bottom: 0;
     width: 100%;
     height: 25vh;
+    position: static;
     background-color: #fff;
     color:#30110d;
     justify-content: center;
@@ -391,13 +398,6 @@ margin-left: 50px !important;
 
 
 @media(max-width: 992px) {
-   
-    section#homepage{
-        height: 53vh;
-    }
-
-
-    
     .navbar .links,
     .navbar .action_btn{
         display: none;
@@ -429,12 +429,9 @@ margin-left: 50px !important;
         display: block;
     }
 
-  
-
    .image-slider{
     width: 600px;
     height: 400px;   
-    top: 6vh;
    }
 
    .image-slider .slide{
@@ -443,11 +440,11 @@ margin-left: 50px !important;
 }
     
    .image-slider .navigation{
-    bottom: 30px;
+    bottom: 10px;
 }
 
 .about{
-    padding-top: 10px !important;
+    padding-top: 130px !important;
     padding-left: 0px;
     padding-right: 0px;
    
@@ -459,8 +456,10 @@ margin-left: 50px !important;
 }
 
 .info{
+    margin: 0px;
     margin-top: 10px !important;
     padding-right: 30px;
+    width: 50%;
 }
 
 .about-info{
@@ -497,7 +496,6 @@ margin-left: 50px !important;
 }
 
 .card{
-    margin: 10px;
     width: 230px;
     height: 270px;
   
@@ -524,18 +522,16 @@ margin-left: 50px !important;
     margin: 25px 25px 0px 25px;
 }
 
+.fb-info{
+    font-size: .8rem;
+}
+.footer{
+    position: fixed;
+}
+
 }
 
 @media(max-width: 576px) {
-
-    .image-slider{
-        top: 5vh;
-    }
-
-    section#homepage{
-        height: 40vh;
-    }
-
     .drop-down{
         left: 2rem;
         width: unset;
@@ -543,6 +539,10 @@ margin-left: 50px !important;
 
     .flexbox-holder{
         display: block;
+    }
+
+    .footer{
+        position: relative;
     }
 
 
@@ -610,10 +610,11 @@ margin-left: 50px !important;
     }
     
     .info{
-        margin-top: 10px !important;
-        padding-right: 25px;
-        padding-left: 25px;
-        width: 100%;
+        margin-top: 40px !important;
+        margin-right: auto;
+        margin-left: auto;
+        width: 80%;
+        padding: 0px !important;
     }
     
     .about-info{
@@ -653,15 +654,17 @@ margin-left: 50px !important;
 
 
     .card{
-        margin: 3px;
-        width: 160px;
-        height: 220px;
+        margin-top: 50px;
+        width: 200px;
+        height: 200px;
+        margin-right: auto;
+        margin-left: auto;
       
     }
     
     .card img{
-        width: 140px;
-        height: 140px;
+        width: 180px;
+        height: 180px;
     }
     
     .info-container h1{
@@ -678,6 +681,12 @@ margin-left: 50px !important;
     
     .sub-heading{
         margin: 25px 25px 20px 25px;
+    }
+
+    
+
+    .fb-info{
+        font-size: .8rem;
     }
     
 }
