--- a/offerstyles.css
+++ b/offerstyles.css
@@ -165,11 +165,10 @@ section#homepage{
 }
 
 .image-slider{
-    top: 6vh;
     display: flex;
     position: relative;
-    width: 800px;
-    height: 430px;
+    width: 300px;
+    height: 300px;
     align-items: center;
     justify-content: center;
     background: #fff4f4;  
@@ -178,11 +177,25 @@ section#homepage{
 .image-slider .slide{
     z-index: 1;
     position: absolute;
-    width: 75%;
+    width: 100%;
+    clip-path: circle(0% at 0 50%);
+}
+
+.image-slider .slide1{
+    z-index: 1;
+    position: absolute;
+    width: 100%;
     clip-path: circle(0% at 0 50%);
 }
 
 .image-slider .slide.active{
+    clip-path: circle(150% at 0 50%);
+    transition: 2s;
+    transition-property: clip-path;
+
+}
+
+.image-slider .slide1.active{
     clip-path: circle(150% at 0 50%);
     transition: 2s;
     transition-property: clip-path;
@@ -195,7 +208,19 @@ section#homepage{
     border-radius: 5px;
 }
 
+.image-slider .slide1 img{
+    z-index: 1;
+    width: 100%;
+    border-radius: 5px;
+}
+
 .image-slider .slide .info{
+    position: absolute;
+    top: 0;
+    padding: 15px 30px;
+}
+
+.image-slider .slide1 .info{
     position: absolute;
     top: 0;
     padding: 15px 30px;
@@ -220,17 +245,33 @@ section#homepage{
     cursor: pointer;
 }
 
+.image-slider .navigation .butn1{
+    background: rgba(255, 255, 255, 0.5);
+    width: 12px;
+    height: 12px;
+    margin: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 .image-slider .navigation .butn.active{
     background: #2696e9;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
-/*------- PROGRAM --------*/
 
-.program{
-    /* background: #00d47b; */
+.image-slider .navigation .butn1.active{
+    background: #2696e9;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+/*------- OFFER --------*/
+
+.program-info{
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .heading-container{
+    padding-top: 15vh !important;
     padding: 30px;
     text-align:  center;
     width: 45%;
@@ -243,18 +284,22 @@ section#homepage{
 }
 .card-container{
     justify-content: center;
+    width: 70%;
     display: flex;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card{
-    margin: 10px;
+    margin: 30px;
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 320px;
-    height: 370px;
+    height: 360px;
     padding: 10px;
     border-radius: 5px;
+    
 }
 
 .card img{
@@ -286,9 +331,13 @@ section#homepage{
     justify-content: center;
 }
 .about-info{
+    
     font-size: 1.2rem;
     font-weight: 100;
     margin-bottom: 10px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image-holder{
@@ -391,12 +440,22 @@ margin-left: 50px !important;
 
 
 @media(max-width: 992px) {
-   
+    .program-info{
+        text-align: center;
+    }
+    .card{
+        margin-left: auto;
+        margin-right: auto;
+    }
     section#homepage{
         height: 53vh;
     }
 
-
+    .card-container{
+        justify-content: center;
+        display: inline-block;
+        width: 100%;
+    }
     
     .navbar .links,
     .navbar .action_btn{
@@ -431,20 +490,10 @@ margin-left: 50px !important;
 
   
 
-   .image-slider{
-    width: 600px;
-    height: 400px;   
-    top: 6vh;
-   }
+  
 
-   .image-slider .slide{
-    width: 90%;
 
-}
-    
-   .image-slider .navigation{
-    bottom: 30px;
-}
+
 
 .about{
     padding-top: 10px !important;
@@ -465,6 +514,8 @@ margin-left: 50px !important;
 
 .about-info{
     font-size: .9rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image-holder{
@@ -496,17 +547,7 @@ margin-left: 50px !important;
     width: auto;
 }
 
-.card{
-    margin: 10px;
-    width: 230px;
-    height: 270px;
-  
-}
 
-.card img{
-    width: 210px;
-    height: 210px;
-}
 
 .info-container h1{
     font-size: 1rem;
@@ -527,11 +568,12 @@ margin-left: 50px !important;
 }
 
 @media(max-width: 576px) {
-
-    .image-slider{
-        top: 5vh;
+    .card-container{
+        justify-content: center;
+        display: inline-block;
     }
-
+    
+ 
     section#homepage{
         height: 40vh;
     }
@@ -555,12 +597,7 @@ margin-left: 50px !important;
         width: 100%;
     }
 
-    .image-slider{
-        width: 300px;
-        height: 200px;
-        
-       }
-        
+  
     .image-slider .navigation{
         bottom: 10px;
     }
@@ -618,6 +655,8 @@ margin-left: 50px !important;
     
     .about-info{
         font-size: .9rem;
+        margin-left: auto;
+        margin-right: auto;
         
     }
     
@@ -652,17 +691,9 @@ margin-left: 50px !important;
     }
 
 
-    .card{
-        margin: 3px;
-        width: 160px;
-        height: 220px;
-      
-    }
+  
     
-    .card img{
-        width: 140px;
-        height: 140px;
-    }
+   
     
     .info-container h1{
         font-size: 1rem;
